--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -4,7 +4,7 @@ spring.server.port=8080
 #langchain4j测试模型
 langchain4j.open-ai.chat-model.base-url=http://langchain4j.dev/demo/openai/v1
 langchain4j.open-ai.chat-model.api-key=demo
-langchain4j.open-ai.chat-model.model-name=gpt-4o
+langchain4j.open-ai.chat-model.model-name=gpt-4o-mini
 #请求和响应日志
 langchain4j.open-ai.chat-model.log-requests=true
 langchain4j.open-ai.chat-model.log-responses=true
