--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -19,3 +19,6 @@ langchain4j.ollama.chat-model.timeout=PT60S
 #阿里百炼平台
 langchain4j.community.dashscope.chat-model.api-key=${DASH_SCOPE_API_KEY}
 langchain4j.community.dashscope.chat-model.model-name=qwen-max
+
+#MongoDB连接配置
+spring.data.mongodb.uri=mongodb://localhost:27017/chat_memory_db
